crates/franken-engine/tests/snapshots/benchmark_evidence_bundle__complex_parity_edge_cases.snap
---
source: src/benchmark_evidence_bundle.rs
expression: actual_json
---
{
  "bundle_id": "complex-parity-bundle-001",
  "schema_version": "franken-engine.benchmark-evidence-bundle.v1",
  "status": "sealed",
  "created_epoch": 3,
  "provenances": [
    {
      "workload_id": "workload-mixed",
      "name": "Mixed Results Workload",
      "category": "framework",
      "source": "https://github.com/example/stress-tests",
      "pinned_version": "v3.1.4",
      "content_hash": [
        107,
        183,
        54,
        249,
        240,
        85,
        110,
        223,
        26,
        66,
        113,
        26,
        253,
        73,
        81,
        204,
        153,
        79,
        44,
        194,
        190,
        233,
        254,
        222,
        235,
        110,
        122,
        158,
        137,
        208,
        0,
        199
      ],
      "provenance_epoch": 3,
      "tags": [
        "golden",
        "mixed"
      ]
    }
  ],
  "runs": [
    {
      "run_id": "run-mixed-001",
      "workload_id": "workload-mixed",
      "duration_us": 25500,
      "peak_memory_bytes": 3145728,
      "gc_pause_us": 500,
      "is_warmup": false,
      "iteration": 0,
      "environment": {
        "os": "Ubuntu 22.04.4 LTS",
        "cpu_model": "AMD Ryzen 9 5900X",
        "logical_cores": 12,
        "memory_bytes": 34359738368,
        "runtime_version": "Node.js v20.10.0",
        "engine_version": "V8 11.8.172.17",
        "extra": {
          "optimization_level": "O3"
        },
        "snapshot_hash": [
          201,
          132,
          159,
          98,
          51,
          220,
          233,
          8,
          123,
          222,
          204,
          229,
          248,
          104,
          233,
          37,
          67,
          82,
          202,
          196,
          106,
          224,
          148,
          232,
          152,
          232,
          130,
          217,
          112,
          65,
          135,
          14
        ]
      },
      "run_epoch": 3
    }
  ],
  "parity_verdicts": [
    {
      "workload_id": "workload-mixed",
      "target": "v8_isolate",
      "output_equivalent": true,
      "performance_ratio_millionths": 1000000,
      "behavioral_differences": 1,
      "difference_details": [
        "minor diagnostic-order difference"
      ],
      "evidence_hash": [
        230,
        168,
        240,
        251,
        85,
        250,
        234,
        114,
        51,
        44,
        252,
        205,
        111,
        77,
        105,
        142,
        236,
        21,
        141,
        241,
        123,
        132,
        147,
        220,
        187,
        149,
        167,
        101,
        230,
        99,
        238,
        73
      ]
    }
  ],
  "reference_environment": {
    "os": "Ubuntu 22.04.4 LTS",
    "cpu_model": "AMD Ryzen 9 5900X",
    "logical_cores": 12,
    "memory_bytes": 34359738368,
    "runtime_version": "Node.js v20.10.0",
    "engine_version": "V8 11.8.172.17",
    "extra": {
      "optimization_level": "O3"
    },
    "snapshot_hash": [
      201,
      132,
      159,
      98,
      51,
      220,
      233,
      8,
      123,
      222,
      204,
      229,
      248,
      104,
      233,
      37,
      67,
      82,
      202,
      196,
      106,
      224,
      148,
      232,
      152,
      232,
      130,
      217,
      112,
      65,
      135,
      14
    ]
  },
  "environment_drifts": [],
  "reproducibility_pack": null,
  "bundle_hash": [
    46,
    28,
    250,
    130,
    176,
    53,
    194,
    108,
    187,
    189,
    174,
    99,
    44,
    234,
    7,
    5,
    20,
    235,
    139,
    119,
    63,
    97,
    106,
    174,
    175,
    102,
    142,
    47,
    11,
    232,
    241,
    13
  ]
}
