crates/franken-engine/tests/snapshots/benchmark_evidence_bundle__failing_bundle_with_regression.snap
---
source: src/benchmark_evidence_bundle.rs
expression: actual_json
---
{
  "bundle_id": "failing-bundle-001",
  "schema_version": "franken-engine.benchmark-evidence-bundle.v1",
  "status": "sealed",
  "created_epoch": 2,
  "provenances": [
    {
      "workload_id": "workload-regression",
      "name": "Regression Test Case",
      "category": "application",
      "source": "https://github.com/example/regression-tests",
      "pinned_version": "v2.0.1",
      "content_hash": [
        198,
        228,
        226,
        248,
        21,
        4,
        198,
        163,
        124,
        105,
        98,
        141,
        161,
        104,
        195,
        124,
        70,
        169,
        241,
        238,
        61,
        225,
        206,
        168,
        159,
        199,
        37,
        252,
        191,
        116,
        164,
        108
      ],
      "provenance_epoch": 2,
      "tags": [
        "golden",
        "regression"
      ]
    }
  ],
  "runs": [
    {
      "run_id": "run-regr-001",
      "workload_id": "workload-regression",
      "duration_us": 45000,
      "peak_memory_bytes": 4194304,
      "gc_pause_us": 2000,
      "is_warmup": false,
      "iteration": 0,
      "environment": {
        "os": "Ubuntu 22.04.3 LTS",
        "cpu_model": "Intel i7-10700K",
        "logical_cores": 8,
        "memory_bytes": 17179869184,
        "runtime_version": "Node.js v18.17.1",
        "engine_version": "V8 11.3.244.8",
        "extra": {
          "optimization_level": "O2"
        },
        "snapshot_hash": [
          211,
          221,
          191,
          99,
          45,
          17,
          6,
          144,
          95,
          66,
          120,
          180,
          67,
          215,
          13,
          151,
          214,
          243,
          168,
          41,
          3,
          34,
          32,
          87,
          148,
          0,
          88,
          24,
          93,
          195,
          191,
          254
        ]
      },
      "run_epoch": 2
    }
  ],
  "parity_verdicts": [
    {
      "workload_id": "workload-regression",
      "target": "node_js",
      "output_equivalent": false,
      "performance_ratio_millionths": 300000,
      "behavioral_differences": 5,
      "difference_details": [
        "golden regression fixture behavior mismatch"
      ],
      "evidence_hash": [
        185,
        147,
        195,
        155,
        119,
        159,
        75,
        13,
        170,
        24,
        38,
        120,
        145,
        159,
        176,
        12,
        79,
        36,
        6,
        3,
        73,
        196,
        11,
        126,
        148,
        18,
        89,
        112,
        121,
        36,
        174,
        8
      ]
    }
  ],
  "reference_environment": {
    "os": "Ubuntu 22.04.3 LTS",
    "cpu_model": "Intel i7-10700K",
    "logical_cores": 8,
    "memory_bytes": 17179869184,
    "runtime_version": "Node.js v18.17.1",
    "engine_version": "V8 11.3.244.8",
    "extra": {
      "optimization_level": "O2"
    },
    "snapshot_hash": [
      211,
      221,
      191,
      99,
      45,
      17,
      6,
      144,
      95,
      66,
      120,
      180,
      67,
      215,
      13,
      151,
      214,
      243,
      168,
      41,
      3,
      34,
      32,
      87,
      148,
      0,
      88,
      24,
      93,
      195,
      191,
      254
    ]
  },
  "environment_drifts": [
    "runtime: Node.js v18.17.0 vs Node.js v18.17.1"
  ],
  "reproducibility_pack": null,
  "bundle_hash": [
    46,
    28,
    250,
    130,
    176,
    53,
    194,
    108,
    187,
    189,
    174,
    99,
    44,
    234,
    7,
    5,
    20,
    235,
    139,
    119,
    63,
    97,
    106,
    174,
    175,
    102,
    142,
    47,
    11,
    232,
    241,
    13
  ]
}
