crates/franken-engine/tests/snapshots/benchmark_evidence_bundle__minimal_bundle.snap
---
source: src/benchmark_evidence_bundle.rs
expression: actual_json
---
{
  "bundle_id": "minimal-bundle-001",
  "schema_version": "franken-engine.benchmark-evidence-bundle.v1",
  "status": "assembling",
  "created_epoch": 1,
  "provenances": [],
  "runs": [],
  "parity_verdicts": [],
  "reference_environment": null,
  "environment_drifts": [],
  "reproducibility_pack": null,
  "bundle_hash": [
    46,
    28,
    250,
    130,
    176,
    53,
    194,
    108,
    187,
    189,
    174,
    99,
    44,
    234,
    7,
    5,
    20,
    235,
    139,
    119,
    63,
    97,
    106,
    174,
    175,
    102,
    142,
    47,
    11,
    232,
    241,
    13
  ]
}
