crates/franken-engine/tests/snapshots/benchmark_evidence_bundle__passing_bundle_with_multiple_workloads.snap
---
source: src/benchmark_evidence_bundle.rs
expression: actual_json
---
{
  "bundle_id": "passing-bundle-001",
  "schema_version": "franken-engine.benchmark-evidence-bundle.v1",
  "status": "sealed",
  "created_epoch": 1,
  "provenances": [
    {
      "workload_id": "workload-fibonacci",
      "name": "Fibonacci Recursive",
      "category": "micro",
      "source": "https://github.com/example/benchmarks",
      "pinned_version": "v1.2.3",
      "content_hash": [
        252,
        50,
        188,
        223,
        58,
        180,
        71,
        97,
        77,
        43,
        68,
        8,
        208,
        68,
        228,
        246,
        247,
        184,
        87,
        95,
        245,
        20,
        199,
        13,
        229,
        12,
        148,
        189,
        75,
        38,
        35,
        8
      ],
      "provenance_epoch": 1,
      "tags": [
        "fibonacci",
        "golden"
      ]
    },
    {
      "workload_id": "workload-sorting",
      "name": "QuickSort Array",
      "category": "memory",
      "source": "https://github.com/example/benchmarks",
      "pinned_version": "v1.2.3",
      "content_hash": [
        77,
        213,
        59,
        7,
        62,
        217,
        152,
        142,
        206,
        213,
        156,
        142,
        235,
        188,
        36,
        174,
        116,
        67,
        116,
        56,
        61,
        85,
        252,
        91,
        48,
        172,
        140,
        191,
        196,
        179,
        228,
        166
      ],
      "provenance_epoch": 1,
      "tags": [
        "golden",
        "sorting"
      ]
    }
  ],
  "runs": [
    {
      "run_id": "run-fib-001",
      "workload_id": "workload-fibonacci",
      "duration_us": 15000,
      "peak_memory_bytes": 1048576,
      "gc_pause_us": 200,
      "is_warmup": false,
      "iteration": 0,
      "environment": {
        "os": "Ubuntu 22.04.3 LTS",
        "cpu_model": "Intel i7-10700K",
        "logical_cores": 8,
        "memory_bytes": 17179869184,
        "runtime_version": "Node.js v18.17.1",
        "engine_version": "V8 11.3.244.8",
        "extra": {
          "optimization_level": "O2"
        },
        "snapshot_hash": [
          211,
          221,
          191,
          99,
          45,
          17,
          6,
          144,
          95,
          66,
          120,
          180,
          67,
          215,
          13,
          151,
          214,
          243,
          168,
          41,
          3,
          34,
          32,
          87,
          148,
          0,
          88,
          24,
          93,
          195,
          191,
          254
        ]
      },
      "run_epoch": 1
    },
    {
      "run_id": "run-fib-002",
      "workload_id": "workload-fibonacci",
      "duration_us": 14800,
      "peak_memory_bytes": 1048576,
      "gc_pause_us": 180,
      "is_warmup": false,
      "iteration": 1,
      "environment": {
        "os": "Ubuntu 22.04.3 LTS",
        "cpu_model": "Intel i7-10700K",
        "logical_cores": 8,
        "memory_bytes": 17179869184,
        "runtime_version": "Node.js v18.17.1",
        "engine_version": "V8 11.3.244.8",
        "extra": {
          "optimization_level": "O2"
        },
        "snapshot_hash": [
          211,
          221,
          191,
          99,
          45,
          17,
          6,
          144,
          95,
          66,
          120,
          180,
          67,
          215,
          13,
          151,
          214,
          243,
          168,
          41,
          3,
          34,
          32,
          87,
          148,
          0,
          88,
          24,
          93,
          195,
          191,
          254
        ]
      },
      "run_epoch": 1
    },
    {
      "run_id": "run-sort-001",
      "workload_id": "workload-sorting",
      "duration_us": 8500,
      "peak_memory_bytes": 2097152,
      "gc_pause_us": 350,
      "is_warmup": false,
      "iteration": 0,
      "environment": {
        "os": "Ubuntu 22.04.3 LTS",
        "cpu_model": "Intel i7-10700K",
        "logical_cores": 8,
        "memory_bytes": 17179869184,
        "runtime_version": "Node.js v18.17.1",
        "engine_version": "V8 11.3.244.8",
        "extra": {
          "optimization_level": "O2"
        },
        "snapshot_hash": [
          211,
          221,
          191,
          99,
          45,
          17,
          6,
          144,
          95,
          66,
          120,
          180,
          67,
          215,
          13,
          151,
          214,
          243,
          168,
          41,
          3,
          34,
          32,
          87,
          148,
          0,
          88,
          24,
          93,
          195,
          191,
          254
        ]
      },
      "run_epoch": 1
    }
  ],
  "parity_verdicts": [
    {
      "workload_id": "workload-fibonacci",
      "target": "node_js",
      "output_equivalent": true,
      "performance_ratio_millionths": 1050000,
      "behavioral_differences": 0,
      "difference_details": [],
      "evidence_hash": [
        104,
        174,
        135,
        193,
        21,
        30,
        90,
        55,
        130,
        228,
        124,
        197,
        220,
        202,
        17,
        51,
        155,
        172,
        203,
        223,
        200,
        210,
        19,
        227,
        191,
        185,
        129,
        235,
        42,
        30,
        230,
        162
      ]
    },
    {
      "workload_id": "workload-sorting",
      "target": "node_js",
      "output_equivalent": true,
      "performance_ratio_millionths": 980000,
      "behavioral_differences": 0,
      "difference_details": [],
      "evidence_hash": [
        25,
        119,
        73,
        52,
        177,
        126,
        73,
        165,
        165,
        30,
        59,
        105,
        77,
        191,
        229,
        150,
        58,
        220,
        115,
        56,
        94,
        64,
        66,
        109,
        8,
        21,
        14,
        21,
        80,
        93,
        80,
        225
      ]
    }
  ],
  "reference_environment": {
    "os": "Ubuntu 22.04.3 LTS",
    "cpu_model": "Intel i7-10700K",
    "logical_cores": 8,
    "memory_bytes": 17179869184,
    "runtime_version": "Node.js v18.17.1",
    "engine_version": "V8 11.3.244.8",
    "extra": {
      "optimization_level": "O2"
    },
    "snapshot_hash": [
      211,
      221,
      191,
      99,
      45,
      17,
      6,
      144,
      95,
      66,
      120,
      180,
      67,
      215,
      13,
      151,
      214,
      243,
      168,
      41,
      3,
      34,
      32,
      87,
      148,
      0,
      88,
      24,
      93,
      195,
      191,
      254
    ]
  },
  "environment_drifts": [],
  "reproducibility_pack": null,
  "bundle_hash": [
    46,
    28,
    250,
    130,
    176,
    53,
    194,
    108,
    187,
    189,
    174,
    99,
    44,
    234,
    7,
    5,
    20,
    235,
    139,
    119,
    63,
    97,
    106,
    174,
    175,
    102,
    142,
    47,
    11,
    232,
    241,
    13
  ]
}
